[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lable-noise-3d"
version = "0.1.0"
description = "Analysis of the Impact of Label Noise for Pre-Training of 3D Object Detection Deep Learning Models"
requires-python = ">=3.10"
dependencies = [
      "numpy",
      "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]